# linien

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  README.rst  bit2bin.py  client.spec  client_requirements  flake.nix  foo.py  make.py  mdio-tool.nix  mypy.ini  pyinstaller.spec  pyproject.toml  pytest.ini  requirements.txt  requirements_client  requirements_client.txt  requirements_dev.txt  requirements_gui  requirements_gui.txt  requirements_server.txt  setup.py  setup_client.py  setup_gui.py  setup_server.py  test_raw_acquisition.py  upload_pypi.sh  version-info.json
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/actions/: action.yml  install-linien.yml
.github/workflows/: main.yml  mypy.yml  publish-pypi.yml  publish-test-pypi.yml  pyinstaller-linux.yml  pyinstaller-linux2.yml  pyinstaller-lnux.yml  pyinstaller-windows.yml  pyinstaller-windows2.yml  pytest.yml  (+1 more)
aiopath/: default.nix
app-paths/: default.nix
docs/: gateware_flowchart.md  system_architecture.graphml
gateware/: analog.py  bit2bin.py  build_fpga_image.sh  chains.py  cic.py  cordic.py  crg.py  delta_sigma.py  dna.py  filter.py  fpga_image_helper.py  gpio.py  hw_platform.py  iir.py  iir_.py  lfsr.py  limit.py  linien.py  linien_module.py  lockin.py  lsfr.py  modulate.py  phasedet.py  pid.py  pitaya_ps.py  platform.py  redpid.py  relock.py  servo.py  servomux.py  slow.py  sweep.py  test_pid.py  test_watch_lock.py  watch_lock.py  xadc.py
hardware/: .gitignore  Makefile  README.fab.txt  gafrc  gnetlistrc  gschemrc  redpid.gsch2pcb  redpid.net  redpid.pcb  redpid.sch  redpid_digital.sch  redpid_fast.sch  redpid_pwr.sch  redpid_slow.sch
hooks/: post-receive
linie/: common.py  config.py
linien/: __init__.py  common.py  config.py  server
linien-client/: pkg.nix  pyproject.toml  requirements.txt  setup.cfg  setup.py
linien-client/linien/client/: connection.py  remote_parameters.py  utils.py
linien-client/linien_client/: __init__.py  communication.py  connection.py  deploy.py  device.py  exceptions.py  remote_parameters.py  utils.py
linien-common/: pkg.nix  pyproject.toml  requirements.txt  setup.cfg  setup.py
linien-common/linien_common/: __init__.py  common.py  communication.py  config.py  enums.py  influxdb.py
linien-gui/: pkg.nix  pyinstaller.spec  pyproject.toml  requirements.txt  setup.cfg  setup.py
linien-gui/linien/gui/: app.py
linien-gui/linien/gui/ui/: device_manager.py  device_manager.ui  general_panel.py  locking_panel.py  main_window.py  new_device_dialog.py  plot_widget.py  psd_table_widget.py  psd_window.py  spectroscopy_panel.py  spin_box.py  view_panel.py
linien-gui/linien_gui/: __init__.py  app.py  config.py  connection_thread.py  dialogs.py  threads.py  utils.py  widgets.py
linien-gui/linien_gui/ui/: device_manager.py  general_panel.py  general_panel.ui  lock_status_panel.py  locking_panel.py  locking_panel.ui  logging_panel.py  logging_panel.ui  main_window.py  main_window.ui  modulation_sweep_panel.py  modulation_sweep_panel.ui  new_device_dialog.py  new_device_dialog.ui  optimization_panel.py  optimization_panel.ui  plot_widget.py  psd_plot_widget.py  psd_table_widget.py  psd_window.py  psd_window.ui  relocking_panel.py  relocking_panel.ui  right_panel.py  spectroscopy_panel.py  spectroscopy_panel.ui  spin_box.py  sweep_control.py  version_checker.py  view_panel.py  view_panel.ui
linien-server/: cli.py  pkg.nix  pyproject.toml  requirements.txt  setup.cfg  setup.py
linien-server/linien/server/: acquisition.py  acquisition_process.py  approach_line.py  linien_start_server.sh  parameter_store.py  parameters.py  parameters_base.py  registers.py  server.py  utils.py
linien-server/linien/server/autolock/: algorithm_selection.py  autolock.py  fast.py  robust.py
linien-server/linien/server/optimization/: engine.py  optimization.py
linien-server/linien/server/pid_optimization/: pid_optimization.py
linien-server/linien_server/: __init__.py  acquisition.py  acquisition_process.py  approach_line.py  cli.py  csr.py  csrmap.py  iir_coeffs.py  influxdb.py  linien-server.service  linien.service  linien_install_requirements.sh  linien_start_server.sh  linien_stop_server.sh  mdio-tool  mdio_tool.py  noise_analysis.py  parameter_store.py  parameters.py  parameters_base.py  registers.py  server.py  utils.py
linien-server/linien_server/acquisition/: controller.py  service.py
linien-server/linien_server/autolock/: algorithm_selection.py  autolock.py  fast.py  robust.py  simple.py  utils.py
linien-server/linien_server/optimization/: approach_line.py  approacher.py  engine.py  general.py  mdio_tool.py  optimization.py  utils.py
linien-server/linien_server/pid_optimization/: pid_optimization.py
linien-server/server/: acquisition_process.py  linien_stop_ethernet_blinking.sh  registers.py  server.py  utils.py
pyrp3/: default.nix
scripts/: bit2bin.py  build_fpga_image.sh  build_gateware.sh  build_standalone_client.sh  fpga_image_helper.py  upload_pypi.sh
spectrolock/: autolock.py  config.py  control.py  csr.py  csrmap.py  gui.py  iir_coeffs.py  parameters.py  pid.kv  spectrolock.py  ws.py
test/: cic.py  csr.py  csrmap.py  iir_coeffs.py  iir_impl.py  iir_transfer.py  limit.py  transfer.py
tests/: test_algorithm_selection.py  test_approacher.py  test_autolock.py  test_common.py  test_delta_sigma.py  test_experimental_autolock.py  test_experimental_integrator_autolock.py  test_fast_autolock.py  test_fast_autolock_cpu.py  test_fast_autolock_fpga.py  test_limit.py  test_modulate.py  test_optimizer_engines.py  test_optimizer_utils.py  test_pid.py  test_pid_transfer.py  test_robust_autolock.py  test_root.py  test_simple_autolock_cpu.py  test_simple_autolock_fpga.py  test_sweep.py
unpackable/: default.nix
verilog/: axi_slave.v  dont_touch.xdc  processing_system7_v5_4_processing_system7.v  red_pitaya_dfilt1.v  red_pitaya_ps.v  red_pitaya_scope.v  red_pitaya_top.v  system.v  system_ooc.xdc  system_processing_system7_0_0.v  system_processing_system7_0_0.xdc  system_wrapper.v
(+236 files in other folders)
