[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "linien-client"
version = "2.0.0rc1"
authors = [
    { name = "Benjamin Wiegand", email = "benjamin.wiegand@physik.hu-berlin.de" },
    { name = "Bastian Leykauf", email = "leykauf@physik.hu-berlin.de" },
    { name = "Robert Jördens", email = "rj@quartiq.de" },
    { name = "Christian Freier", email = "christian.freier@gmail.com" },
    { name = "Doron Behar", email = "doron.behar@gmail.com" },
]
maintainers = [
    { name = "Bastian Leykauf", email = "leykauf@physik.hu-berlin.de" },
]
description = "Client components of the Linien spectroscopy lock application."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "fabric>=2.7.0,<3.0",
    "typing_extensions>=4.5.0,<5.0",
    "linien-common==2.0.0rc1",
]

[project.readme]
text = "Have a look at the [project repository](https://github.com/linien-org/linien) for installation instructions."
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/linien-org/linien/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
