[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "linien-common"
version = "0.9.0.dev0"
authors = [{ name = "Benjamin Wiegand", email = "highwaychile@posteo.de" }]
maintainers = [
    { name = "Bastian Leykauf", email = "leykauf@physik.hu-berlin.de" },
]
description = "Shared components of the Linien spectroscopy lock application."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "appdirs>=1.4.4",
    "click>=8.1.3",
    "importlib_metadata>=2.1.3",
    "numpy>=1.21.5",
    "rpyc>=5.0,<6.0",
    "scipy>=1.8.0",
]

[project.readme]
text = "Have a look at the [project repository](https://github.com/linien-org/linien) for installation instructions."
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/linien-org/linien"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
