[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "linien-common"
version = "2.0.0rc1"
authors = [
    { name = "Benjamin Wiegand", email = "benjamin.wiegand@physik.hu-berlin.de" },
    { name = "Bastian Leykauf", email = "leykauf@physik.hu-berlin.de" },
    { name = "Robert Jördens", email = "rj@quartiq.de" },
    { name = "Christian Freier", email = "christian.freier@gmail.com" },
    { name = "Doron Behar", email = "doron.behar@gmail.com" },
]
maintainers = [
    { name = "Bastian Leykauf", email = "leykauf@physik.hu-berlin.de" },
]
description = "Shared components of the Linien spectroscopy lock application."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "appdirs>=1.4.4,<2.0",
    "fire>=0.5.0",
    "importlib_metadata>=2.1.3,<5.0",
    "numpy>=1.21.5,<2.0",
    "rpyc>=6.0,<7.0",
    "scipy>=1.8.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.8.0",
    "pre-commit>=2.20.0",
    "flake8>=5.0.4",
    "isort>=5.10.1",
    "flake8-pyproject>=1.2.3",
    "setuptools_scm>=6.2",
]

[project.readme]
text = "Have a look at the [project repository](https://github.com/linien-org/linien) for installation instructions."
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/linien-org/linien"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
