[metadata]
name = linien-common
version = 0.9.0.dev0
author = Benjamin Wiegand
author_email = highwaychile@posteo.de
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
description = Shared components of the Linien spectroscopy lock application.
url = https://github.com/linien-org/linien
long_description = Have a look at the [project repository](https://github.com/linien-org/linien) for installation instructions.
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    appdirs>=1.4.4
    click>=8.1.3
    importlib_metadata>=2.1.3
    numpy>=1.24.2
    rpyc>=4.0,<5.0
    scipy>=1.10.1
python_requires = >=3.8
