[metadata]
name = linien-gui
version = 2.0.0dev0
author = Benjamin Wiegand
author_email = highwaychile@posteo.de
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
description = Graphical user interface of the Linien spectroscopy lock application.
url = https://github.com/linien-org/linien
long_description = Have a look at the [project repository](https://github.com/linien-org/linien) for installation instructions.
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    click>=7.1.2
    pyqtgraph>=0.10.0
    PyQt5>=5.12.0
    superqt>=0.2.3
    linien_client==2.0.0dev0
python_requires = >=3.8

[options.entry_points]
console_scripts = linien=linien_gui.app:run_application

[options.package_data]
 = *.ui; *.ico
