[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "linien-server"
version = "2.0.0rc1"
authors = [
    { name = "Benjamin Wiegand", email = "benjamin.wiegand@physik.hu-berlin.de" },
    { name = "Bastian Leykauf", email = "leykauf@physik.hu-berlin.de" },
    { name = "Robert Jördens", email = "rj@quartiq.de" },
    { name = "Christian Freier", email = "christian.freier@gmail.com" },
    { name = "Doron Behar", email = "doron.behar@gmail.com" },
]
maintainers = [
    { name = "Bastian Leykauf", email = "leykauf@physik.hu-berlin.de" },
]
description = "Server components of the Linien spectroscopy lock application."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "cma>=3.0.3,<4.0",
    "influxdb-client[ciso]>=1.9,<2.0",
    "pylpsd>=0.1.4",
    "pyrp3>=2.0.1,<3.0;platform_machine=='armv7l'",
    "linien-common==2.0.0rc1",
]

[project.readme]
text = "Have a look at the [project repository](https://github.com/linien-org/linien) for installation instructions."
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/linien-org/linien"

[project.scripts]
linien-server = "linien_server.cli:main"

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
data = ["gateware.bin", "mdio-tool", "linien-server.service"]
